tests/sumo/meso/junction_control/tls_coordination/bad/control.limited_tlsPenalty/output.sumo.meso
Loading net-file from 'net.net.xml' ... done (4ms).
Loading additional-files from 'input_additional.add.xml' ... done (0ms).
Loading done.
Simulation version v1_5_0+0174-0b4d252505 started with time: 0.00
Simulation ended at time: 152.00
Reason: All vehicles have left the simulation.
Performance: 
 Duration: 6ms
 Real time factor: 25333.3
 UPS: 239000.000000
Vehicles: 
 Inserted: 30
 Running: 0
 Waiting: 0
Statistics (avg):
 RouteLength: 300.00
 Speed: 6.29
 Duration: 47.80
 WaitingTime: 0.00
 TimeLoss: 25.76
 DepartDelay: 15.97

